Fix website on smaller screens

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -130,54 +130,40 @@ h1 {
 }
 
 /*-------- RESPONSIVE ADJUSTMENTS --------*/
-@media only screen and (max-width: 680px) {
-  iframe{
-      width: 100%;
-      height: 40%;
-  }
-  .modal-content img{
-    max-height: 471px;
-  }
-.modal-container{
-    width: 100%;
-    height: 100%;
-    overflow: scroll;
-  }
-  .modal-content{
-      border: 0px;
-      width: 98%;
-      height: 110%;
-  }
-  .modal-header{
-    transform: translateY(30px);
-}
-}
-@media only screen and (max-width: 580px){
+@media only screen and (max-width: 550px) {
+    .modal-content{
+        width: 100%;
+        height: 100%;
+    }
+    iframe{
+        width: 100%;
+        height: 40%;
+    }
     .modal-header{
         font-size: 18px;
     }
-    .modal-body{
-        max-height: 70%;
-    }
     .modal-body p, .modal-footer .link{
-        font-size: 15px;
+        font-size: 13px;
     }
     .modal-content .close-btn{
         font-size: 14px;
+        margin-top: 10px;
     }
 }
 
 @media only screen and (max-height: 580px) {
+    .modal-content{
+        height: 100%;
+    }
     .modal-body p, .modal-footer .link{
-        font-size: 12px;
+        font-size: 11px;
     }
     .modal-content .close-btn{
-        font-size: 12px;
+        font-size: 11px;
     }
     .modal-header{
-        font-size: 18px;
-        max-height: 30%;
-        transform: translateY(0px)
+        font-size: 16px;
+        padding-bottom: 0%;
     }
     iframe{
         width: 100%;
